# Catch2-SYCL

./: CMakeLists.txt  README.md  TestCase1.cpp  TestCase2.cpp  USMSelector.hpp
